--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -31,8 +31,7 @@ different terms and without source code for the larger work.
 }
 
 #SplineEditor {
-    -fx-background-image: url("../images/bg.png");
-    -fx-background-color: #333;
+    -fx-background-color: linear-gradient(from 100.0% 0.0% to 100.0% 99.0% , #606c57 0.0% , #606c57 1.0% , #732929 43.0% , #702a2a 82.0% , #723232 100.0% );
     /*-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );*/
 }
 .spline-grid-pane {
