--- a/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
@@ -24,9 +24,10 @@
    <center>
       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <children>
-            <GridPane fx:id="gridPane" prefWidth="700.0" styleClass="spline-grid-pane" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
+            <GridPane fx:id="gridPane" alignment="TOP_CENTER" prefWidth="700.0" styleClass="spline-grid-pane" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="-Infinity" minWidth="40.0" prefWidth="40.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints prefHeight="30.0" vgrow="ALWAYS" />
@@ -42,9 +43,9 @@
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <HBox alignment="CENTER" spacing="5.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                  <HBox alignment="CENTER" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                      <children>
-                        <Pane minWidth="-Infinity" prefHeight="55.0" prefWidth="25.0" />
+                        <Pane minWidth="-Infinity" prefHeight="55.0" prefWidth="40.0" />
                         <TextField fx:id="codeTextField" alignment="CENTER" prefHeight="55.0" styleClass="code-text" text="Text" HBox.hgrow="ALWAYS">
                            <effect>
                               <DropShadow color="#3c030f" height="5.0" radius="2.0" spread="0.12" width="5.0" />
@@ -55,7 +56,7 @@
                   </HBox>
                </children>
                <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" top="10.0" />
                </padding>
             </GridPane>
          </children>
@@ -64,7 +65,7 @@
    <right>
       <AnchorPane minWidth="-Infinity" prefWidth="250.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane id="Animation-preview" alignment="CENTER_RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <GridPane id="Animation-preview" alignment="CENTER_RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
                   <ColumnConstraints />
