--- a/fxtools/src/main/resources/fxml/FXMLMainPanel.fxml
+++ b/fxtools/src/main/resources/fxml/FXMLMainPanel.fxml
@@ -13,7 +13,7 @@
    <center>
       <AnchorPane BorderPane.alignment="CENTER">
           <children>
-              <StackPane fx:id="rootContainer" alignment="TOP_LEFT" layoutX="-14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+              <StackPane fx:id="rootContainer" alignment="TOP_LEFT" layoutX="-14.0" stylesheets="@../styles/main.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 
           </children>
 
